@@ -126,6 +126,12 @@ extern "C" {
 #define CSIDL_NETHOOD	19
 #define CSIDL_FONTS	20
 #define CSIDL_TEMPLATES	21
+#define CSIDL_COMMON_STARTMENU	22
+#define CSIDL_COMMON_PROGRAMS	23
+#define CSIDL_COMMON_STARTUP	24
+#define CSIDL_COMMON_DESKTOPDIRECTORY	25
+#define CSIDL_COMMON_ALTSTARTUP	30
+#define CSIDL_COMMON_FAVORITES	31
 #define CFSTR_SHELLIDLIST	"Shell IDList Array"
 #define CFSTR_SHELLIDLISTOFFSET	"Shell Object Offsets"
 #define CFSTR_NETRESOURCES	"Net Resource"
